namespace java at.fhv.kabi.samples.formatwriter.thrift

struct ImageThrift {
  1: string name;
  2: binary imageBytes;
}
