namespace java at.fhv.kabi.samples.formatwriter.thrift

struct PersonThrift {
  1: string fn;
  2: string bday;
  3: string gender;
  4: string adr;
  5: string email;
  6: string tel;
  7: string lang;
  8: string version;
}
