namespace java at.fhv.kabi.samples.formatwriter.thrift

struct SmartLightControllerThrift {
  1: bool on;
  2: i32 sat;
  3: i32 bri;
  4: i32 hue;
}